--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
   <div class="caixa-perguntas"></div>  
   <div class="caixa-alternativas"></div>
+  <div class="caixa-resultado"></div>
+  <P class="texto-resultados"</p> 
 </body>
 </html>
